--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/bootstrap4-dist.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/bootstrap4-dist.css" /> -->
     <!-- not running -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
