--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,27 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="./assets/fontFamily/fontfamily.css" rel="stylesheet" />
+    <link
+      href="./assets/fontFamily/fontfamily.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./assets/css/open-iconic-bootstrap.css" />
-
-    <!-- not running -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
+      href="./assets/css/open-iconic-bootstrap.css"
+      type="text/css"
     />
-    <!-- <link rel="stylesheet" href="./assets/css/bootstrap4-dist.css" /> -->
-    <!-- not running -->
+
+    <link
+      rel="stylesheet"
+      href="./assets/css/bootstrap4-dist.css"
+      type="text/css"
+      rel="stylesheet"
+    />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Calendly</title>
@@ -43,38 +48,19 @@
     type="text/css"
     href="./assets/css/daterangepicker.css"
   />
-  <script
-    src="./assets/js/slim-min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"
-  ></script>
+  <script src="./assets/js/slim-min.js" type="text/javascript"></script>
+  <script src="./assets/js/popper-min.js" type="text/javascript"></script>
+  <script src="./assets/js/bootstrap4-dist.js" type="text/javascript"></script>
 
-  <!-- not running -->
+  <link
+    href="./assets/css/bootstrap4-toggle.css"
+    rel="stylesheet"
+    type="text/css"
+  />
   <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"
+    src="./assets/js/bootstrap4-toggle.js"
+    type="text/javascript"
   ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-    crossorigin="anonymous"
-  ></script>
-
-  <script
-    src="./assets/js/popper-min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="./assets/js/bootstrap4-dist.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"
-  ></script>
-  <!-- not running -->
-
-  <link href="./assets/css/bootstrap4-toggle.css" rel="stylesheet" />
-  <script src="./assets/js/bootstrap4-toggle.js"></script>
 
   <script type="text/javascript" src="./assets/js/latest-jquery.js"></script>
 </html>
